fix(20732): fix toolbar horizontal scroll padding

--- a/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
+++ b/src/features/toolbar/components/ToolbarContent/ToolbarContent.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: row nowrap;
   gap: var(--unit);
+  overflow-x: auto;
 }
 
 .sectionDivider {
